force-app/main/default/objects/Integration_Status__c/Integration_Status__c.object-meta.xml
<CustomObject>
    <description>Used for logging every integration job that executes.</description>
    <label>Integration Status</label>
    <nameField>
        <displayFormat>IS-{000000000}</displayFormat>
        <label>Integration Status</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>