force-app/main/default/objects/Integration_Status__c/fields/Load_Status__c.field-meta.xml
<CustomField>
    <fullName>Load_Status__c</fullName>
    <label>Load Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>