force-app/main/default/objects/Integration_Status__c/fields/Rows_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Rows_Loaded__c</fullName>
    <label>Rows Loaded</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>