force-app/main/default/objects/Integration_Status__c/fields/Total_Rows__c.field-meta.xml
<CustomField>
    <fullName>Total_Rows__c</fullName>
    <label>Total Rows</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>