force-app/main/default/objects/Integration_Status__c/listViews/Timbercreek.listView-meta.xml
<ListView>
    <fullName>Timbercreek</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Timbercreek</label>
    <sharedTo>
        <role>CEO</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>