force-app/main/default/objects/Integration_Status__c/listViews/Todays_Load.listView-meta.xml
<ListView>
    <fullName>Todays_Load</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Rows_Loaded__c</columns>
    <columns>Error_Rows__c</columns>
    <columns>Total_Rows__c</columns>
    <columns>Load_Status__c</columns>
    <columns>Time_Job_Started__c</columns>
    <columns>Time_Job_Completed__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Load</label>
</ListView>